crates/tui/tests/snapshots/views__session-missing-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › session   account Acme (1)   list Weekly
session  no credentials are stored

press Enter to begin a login



































q quit  Enter log in  Esc back  Ctrl-p palette
