crates/tui/tests/snapshots/views__toast-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                       Status                    Subscribed
ada@example.com             subscribed                2026-01-01T00:00:00+00:00
grace@example.com           unconfirmed               null

















DELETE /1.0/accounts/1/lists/7/subscribers/1 — 204

q quit  Enter open  / filter loaded  Esc back  Ctrl-p palette
