crates/tui/tests/snapshots/views__too-small-79x23.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
the terminal is too small — 80x24 is the floor
