crates/tui/tests/snapshots/views__watches-and-throttle-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                       Status                    Subscribed
ada@example.com             subscribed                2026-01-01T00:00:00+00:00
grace@example.com           unconfirmed               null

















loaded 2
⏳  GET /1.0/accounts/1/lists/7/broadcasts/9 2 in flight throttled
q quit  Enter open  / filter loaded  Esc back  Ctrl-p palette
