crates/tui/tests/snapshots/views__workflow-tree-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › workflows tree   account Acme (1)   list Weekly
  name  Welcome
▶ unpublished  {2 fields}




































q quit  Enter expand  Esc back  Ctrl-p palette
